--- a/src/components/css/index.scss
+++ b/src/components/css/index.scss
@@ -1,7 +1,7 @@
 $font-stack: Helvetica, sans-serif;
-$primary-color-dark: #B8B5FF;
-$primary-color: #9AB3F5;
-$primary-color-light: #A3D8F4;
+$primary-color-dark: #b8b5ff;
+$primary-color: #9ab3f5;
+$primary-color-light: #a3d8f4;
 $secondary-color: #f1f6f9;
 
 %flex-central {
